# dokyu

./: README.md  justfile  pyproject.toml
.github/workflows/: unittest.yml
src/dokyu/: __init__.py
src/dokyu/parser/docstring/: arg.py  args.py  examples.py  returns.py  utils.py
src/dokyu/schema/: docstring.py
tests/: test_dokyu.py
tests/test_parser/test_docstring/: test_arg.py  test_args.py  test_examples.py  test_returns.py
