[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dokyu"
description = "A solution for multi-language docstring"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = [
  "docstring",
  "i18n",
  "multi-language",
  "translation",
  "translation-toolkit",
]
license = { text = "MIT" }
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["pyright>=1.1.293"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff==0.1.5", "syrupy", "build"]

[project.urls]
Homepage = "https://github.com/PFCCLab/dokyu"
Documentation = "https://github.com/PFCCLab/dokyu"

[project.scripts]
dokyu = "dokyu.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "dokyu.__version__.VERSION" }

[tool.pyright]
include = ["moelib", "tests"]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with black
  "E731", # lambda sometimes is more readable
  "F841", # local variable is assigned to but never used, duplicate with pyright
]

[tool.ruff.lint.isort]
known-first-party = ["dokyu"]

[tool.pytest.ini_options]
python_files = ["tests/*.py", "tests/**/*.py"]
